feat(station-service):add StationApi integration tests