@@ -2,7 +2,6 @@ package org.example.station.service.service;
 
 import feign.FeignException;
 import jakarta.persistence.EntityNotFoundException;
-import org.example.order.service.api.common.client.OrderServiceClient;
 import org.example.station.service.api.common.dto.request.RequestOrderMappingStationDto;
 import org.example.station.service.api.common.dto.response.SummaryResponseStationDto;
 import org.example.station.service.dto.AddressCoordinate;
@@ -10,17 +9,24 @@ import org.example.station.service.dto.request.RequestStationDto;
 import org.example.station.service.dto.response.ResponseStationDto;
 import org.example.station.service.entity.Station;
 import org.example.station.service.mapper.StationMapper;
+import org.example.station.service.producer.StationEventProducer;
 import org.example.station.service.repository.StationRepository;
-import org.example.user.api.client.UserServiceFeignClient;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
+import org.mockito.MockedStatic;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.transaction.support.TransactionSynchronization;
+import org.springframework.transaction.support.TransactionSynchronizationManager;
 
 import java.math.BigDecimal;
-import java.util.*;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.Set;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
@@ -29,131 +35,174 @@ import static org.mockito.Mockito.*;
 @ExtendWith(MockitoExtension.class)
 class StationServiceTest {
 
-    @Mock
-    private GeocoderService geocoderService;
-    @Mock
-    private StationMapper stationMapper;
-    @Mock
-    private StationRepository stationRepository;
-    @Mock
-    private OrderServiceClient orderServiceClient;
-    @Mock
-    private UserServiceFeignClient userServiceClient;
+    @Mock private GeocoderService geocoderService;
+    @Mock private StationMapper stationMapper;
+    @Mock private StationRepository stationRepository;
+    @Mock private StationEventProducer stationEventProducer;
 
     @InjectMocks
     private StationService stationService;
 
-    @Test
-    @DisplayName("Успешное добавление станции с геокодированием")
-    void addStation_Success() {
-        RequestStationDto request = new RequestStationDto("СТО 1", "Минск, Гикало 9");
-        AddressCoordinate coords = new AddressCoordinate(new BigDecimal("53.9"), new BigDecimal("27.5"));
-        Station station = new Station();
+    private Station sampleStation;
+    private final Long stationId = 1L;
 
-        when(geocoderService.getCoordinate(request.address())).thenReturn(coords);
-        when(stationMapper.toEntity(request, coords)).thenReturn(station);
+    private final BigDecimal defaultLat = new BigDecimal("53.900000");
+    private final BigDecimal defaultLon = new BigDecimal("27.566700");
 
-        stationService.addStation(request);
-
-        verify(geocoderService).getCoordinate(request.address());
-        verify(stationRepository).save(station);
+    @BeforeEach
+    void setUp() {
+        sampleStation = new Station();
+        sampleStation.setId(stationId);
+        sampleStation.setName("Main Station");
+        sampleStation.setAddressText("Minsk, Lenina 1");
+        sampleStation.setLatitude(defaultLat);
+        sampleStation.setLongitude(defaultLon);
     }
 
     @Test
-    @DisplayName("Поиск всех станций")
+    @DisplayName("Успешное добавление станции")
+    void addStation_Success() {
+        RequestStationDto requestDto = new RequestStationDto("New Station", "Minsk, Pobediteley 5");
+        AddressCoordinate coordinate = new AddressCoordinate(defaultLon, defaultLat);
+
+        when(geocoderService.getCoordinate(requestDto.address())).thenReturn(coordinate);
+        when(stationMapper.toEntity(requestDto, coordinate)).thenReturn(sampleStation);
+
+        stationService.addStation(requestDto);
+
+        verify(geocoderService, times(1)).getCoordinate(requestDto.address());
+        verify(stationRepository, times(1)).save(sampleStation);
+    }
+
+    @Test
+    @DisplayName("Успешное получение списка всех станций")
     void findAll_Success() {
-        when(stationRepository.findAll()).thenReturn(Collections.emptyList());
-        when(stationMapper.toDtoList(any())).thenReturn(Collections.emptyList());
+        // В ResponseStationDto порядок: id, longitude, latitude, name, address
+        ResponseStationDto responseDto = new ResponseStationDto(
+                stationId, defaultLon, defaultLat, "Main Station", "Minsk, Lenina 1"
+        );
+
+        when(stationRepository.findAll()).thenReturn(List.of(sampleStation));
+        when(stationMapper.toDtoList(anyList())).thenReturn(List.of(responseDto));
 
         List<ResponseStationDto> result = stationService.findAll();
 
+        assertEquals(1, result.size());
+        assertEquals("Main Station", result.get(0).name());
+        verify(stationRepository, times(1)).findAll();
+    }
+
+    @Test
+    @DisplayName("Успешное получение станции по ID")
+    void findById_Success() {
+        ResponseStationDto responseDto = new ResponseStationDto(
+                stationId, defaultLon, defaultLat, "Main Station", "Minsk, Lenina 1"
+        );
+
+        when(stationRepository.findById(stationId)).thenReturn(Optional.of(sampleStation));
+        when(stationMapper.toDto(sampleStation)).thenReturn(responseDto);
+
+        ResponseStationDto result = stationService.findById(stationId);
+
         assertNotNull(result);
-        verify(stationRepository).findAll();
+        assertEquals(stationId, result.id());
     }
 
     @Test
-    @DisplayName("Обновление станции: адрес изменился (вызов геокодера)")
-    void update_AddressChanged_CallsGeocoder() {
-        Long id = 1L;
-        RequestStationDto dto = new RequestStationDto("Новое имя", "Новый адрес");
-        Station existingStation = new Station();
-        existingStation.setAddressText("Старый адрес");
+    @DisplayName("Ошибка при получении станции по несуществующему ID")
+    void findById_NotFound_ThrowsException() {
+        when(stationRepository.findById(stationId)).thenReturn(Optional.empty());
 
-        AddressCoordinate newCoords = new AddressCoordinate(new BigDecimal("10.0"), new BigDecimal("20.0"));
+        EntityNotFoundException exception = assertThrows(EntityNotFoundException.class,
+                () -> stationService.findById(stationId));
 
-        when(stationRepository.findById(id)).thenReturn(Optional.of(existingStation));
-        when(geocoderService.getCoordinate(dto.address())).thenReturn(newCoords);
-
-        stationService.update(id, dto);
-
-        assertEquals("Новый адрес", existingStation.getAddressText());
-        assertEquals(new BigDecimal("20.0") , existingStation.getLatitude());
-        verify(geocoderService).getCoordinate(anyString());
+        assertEquals("Станция с таким id не была найдена", exception.getMessage());
     }
 
     @Test
-    @DisplayName("Обновление станции: адрес не изменился (геокодер не вызывается)")
-    void update_AddressNotChanged_DoesNotCallGeocoder() {
-        Long id = 1L;
-        RequestStationDto dto = new RequestStationDto("Новое имя", "Тот же адрес");
-        Station existingStation = new Station();
-        existingStation.setAddressText("Тот же адрес");
+    @DisplayName("Успешное обновление станции с изменением адреса (вызов геокодера)")
+    void update_WithAddressChange_Success() {
+        RequestStationDto updateDto = new RequestStationDto("Updated Name", "New Address 123");
 
-        when(stationRepository.findById(id)).thenReturn(Optional.of(existingStation));
+        BigDecimal newLat = new BigDecimal("10.000000");
+        BigDecimal newLon = new BigDecimal("20.000000");
+        AddressCoordinate newCoordinate = new AddressCoordinate(newLon, newLat);
 
-        stationService.update(id, dto);
+        when(stationRepository.findById(stationId)).thenReturn(Optional.of(sampleStation));
+        when(geocoderService.getCoordinate(updateDto.address())).thenReturn(newCoordinate);
 
+        stationService.update(stationId, updateDto);
+
+        assertEquals("Updated Name", sampleStation.getName());
+        assertEquals("New Address 123", sampleStation.getAddressText());
+        assertEquals(newLat, sampleStation.getLatitude());
+        assertEquals(newLon, sampleStation.getLongitude());
+        verify(geocoderService, times(1)).getCoordinate(anyString());
+    }
+
+    @Test
+    @DisplayName("Успешное обновление станции без изменения адреса (геокодер не вызывается)")
+    void update_WithoutAddressChange_Success() {
+        RequestStationDto updateDto = new RequestStationDto("Updated Name", "minsk, lenina 1");
+
+        when(stationRepository.findById(stationId)).thenReturn(Optional.of(sampleStation));
+
+        stationService.update(stationId, updateDto);
+
+        assertEquals("Updated Name", sampleStation.getName());
         verify(geocoderService, never()).getCoordinate(anyString());
-        assertEquals("Новое имя", existingStation.getName());
+        assertEquals(defaultLat, sampleStation.getLatitude());
     }
 
     @Test
-    @DisplayName("Удаление станции и связанных сущностей через Feign")
+    @DisplayName("Успешное удаление станции и отправка события в RabbitMQ")
     void delete_Success() {
-        Long id = 1L;
+        try (MockedStatic<TransactionSynchronizationManager> tsmMock = mockStatic(TransactionSynchronizationManager.class)) {
+            tsmMock.when(TransactionSynchronizationManager::isSynchronizationActive).thenReturn(true);
 
-        stationService.delete(id);
+            tsmMock.when(() -> TransactionSynchronizationManager.registerSynchronization(any(TransactionSynchronization.class)))
+                    .thenAnswer(invocation -> {
+                        TransactionSynchronization sync = invocation.getArgument(0);
+                        sync.afterCommit();
+                        return null;
+                    });
 
-        verify(stationRepository).deleteById(id);
-        verify(orderServiceClient).deleteByStation(id);
-        verify(userServiceClient).deleteWorkersByWorkplace(id);
+            stationService.delete(stationId);
+
+            verify(stationRepository, times(1)).deleteById(stationId);
+            verify(stationEventProducer, times(1)).publishUserDeletedEvent(stationId);
+        }
     }
 
     @Test
-    @DisplayName("Ошибка удаления при сбое Feign клиента")
-    void delete_FeignException_ThrowsRuntimeException() {
-        Long id = 1L;
-        doThrow(FeignException.class).when(orderServiceClient).deleteByStation(id);
+    @DisplayName("Ошибка при удалении: перехват FeignException")
+    void delete_ThrowsFeignException() {
+        FeignException mockFeignException = mock(FeignException.class);
+        doThrow(mockFeignException).when(stationRepository).deleteById(stationId);
 
-        assertThrows(RuntimeException.class, () -> stationService.delete(id));
+        RuntimeException exception = assertThrows(RuntimeException.class,
+                () -> stationService.delete(stationId));
+
+        assertEquals("Не удалось удалить связанные сущности", exception.getMessage());
+        verify(stationEventProducer, never()).publishUserDeletedEvent(any());
     }
 
     @Test
-    @DisplayName("Маппинг станций для списка заказов")
+    @DisplayName("Успешное сопоставление станций с заказами (getStationsByOrders)")
     void getStationsByOrders_Success() {
-        Long orderId = 10L;
-        Long stationId = 1L;
-        RequestOrderMappingStationDto req = new RequestOrderMappingStationDto(orderId, stationId);
+        Long orderId = 100L;
+        RequestOrderMappingStationDto request = new RequestOrderMappingStationDto(orderId, stationId);
 
-        Station station = new Station();
-        station.setId(stationId);
+        SummaryResponseStationDto summaryDto = mock(SummaryResponseStationDto.class);
 
-        SummaryResponseStationDto summary = new SummaryResponseStationDto(stationId, "Name", "Address");
+        when(stationRepository.findAllByIdIn(Set.of(stationId))).thenReturn(List.of(sampleStation));
+        when(stationMapper.toSummaryDto(sampleStation)).thenReturn(summaryDto);
 
-        when(stationRepository.findAllByIdIn(anySet())).thenReturn(List.of(station));
-        when(stationMapper.toSummaryDto(station)).thenReturn(summary);
+        Map<Long, SummaryResponseStationDto> result = stationService.getStationsByOrders(List.of(request));
 
-        Map<Long, SummaryResponseStationDto> result = stationService.getStationsByOrders(List.of(req));
-
+        assertNotNull(result);
+        assertEquals(1, result.size());
         assertTrue(result.containsKey(orderId));
-        assertEquals("Name", result.get(orderId).name());
-    }
-
-    @Test
-    @DisplayName("Ошибка, если станция не найдена по ID")
-    void getStationById_NotFound() {
-        when(stationRepository.findById(anyLong())).thenReturn(Optional.empty());
-
-        assertThrows(EntityNotFoundException.class, () -> stationService.findById(1L));
+        assertEquals(summaryDto, result.get(orderId));
     }
 }
